@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>
 Uploaders: Modestas Vainius <modax@debian.org>, José Manuel Santamaría Lema <panfaust@gmail.com>
 Build-Depends: kde-sc-dev-latest (>= 4:4.6.5),
- cmake, debhelper (>= 7), bzip2, kdelibs5-dev (>= 4:4.6)
+ cmake, debhelper (>= 7.3.16), bzip2, kdelibs5-dev (>= 4:4.6)
 Standards-Version: 3.9.2
 Homepage: http://i18n.kde.org/
 Vcs-Browser: http://git.debian.org/?p=pkg-kde/kde-sc/kde-l10n.git
