@@ -2,6 +2,7 @@ kde-l10n (4:4.6.5-0r1) UNRELEASED; urgency=low
 
   * New upstream release.
   * Bump kde-sc-dev-latest build-dependency to 4:4.6.5.
+  * Use dh_auto_* tools in debian/rules wherever it makes sense.
 
  -- Modestas Vainius <modax@debian.org>  Mon, 04 Jul 2011 11:54:22 +0300
 
